<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:backgroundTint="#86000000"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/this_card1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#47D8CA"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="9dp">

            <TextView
                android:id="@+id/rv_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_549"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_flag"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/rv_region_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/united_states_of_america"
        android:textColor="#05FFE7"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/this_card1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rv_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/_15_82"
        android:textColor="#1EDF38"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/this_card1"
        app:layout_constraintTop_toBottomOf="@id/rv_region_name" />

    <ImageView
        android:id="@+id/image_difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_trending_up_24"
        app:layout_constraintBottom_toBottomOf="@id/rv_diff"
        app:layout_constraintLeft_toRightOf="@id/rv_diff"
        app:layout_constraintTop_toTopOf="@id/rv_diff"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/rv_exchange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/text_uz"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/image_difference"
        app:layout_constraintStart_toEndOf="@id/image_difference"
        app:layout_constraintTop_toTopOf="@id/image_difference"
        tools:ignore="Autofill" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="18dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>